rustdocs/errors/rust-bitcoin-hashes-src-sha3_256-mod.rs.txt
error[E0432]: unresolved import `core`
  --> ../rust-bitcoin/hashes/src/sha3_256/mod.rs:21:5
   |
21 | use core::fmt;
   |     ^^^^
   |     |
   |     you might be missing crate `core`
   |     help: try using `std` instead of `core`: `std`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internal_macros`
  --> ../rust-bitcoin/hashes/src/sha3_256/mod.rs:23:8
   |
23 | crate::internal_macros::general_hash_type! {
   |        ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `internal_macros`

error[E0404]: expected trait, found struct `crate::HashEngine`
   --> ../rust-bitcoin/hashes/src/sha3_256/mod.rs:190:6
    |
190 | impl crate::HashEngine for HashEngine {
    |      ^^^^^^^^^^^^^^^^^ not a trait

error[E0573]: expected type, found derive macro `Hash`
   --> ../rust-bitcoin/hashes/src/sha3_256/mod.rs:191:17
    |
191 |     type Hash = Hash;
    |                 ^^^^ not a type
    |
help: consider importing this trait instead
    |
 21 + use std::hash::Hash;
    |

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0404, E0432, E0433, E0573.
For more information about an error, try `rustc --explain E0404`.
